styles/prosilver/theme/common.css
/* ... */
.approve 			{ padding-left: 21px !important; background-image: url("./images/icon_approve.gif"); }
.change_status		{ padding-left: 15px !important; background-image: url("./images/icon_change_status.gif"); }
.repack 			{ padding-left: 17px !important; background-image: url("./images/icon_repack.gif"); }
.misc				{ padding-left: 19px !important; background-image: url("./images/icon_misc.gif"); }

.queue-actions div.subactions {
	position: absolute;
	z-index: 999;
	background-color: #F1F4F5;
	padding: 5px 0;
	border: 1px solid #D4D6D7;
	border-top: none;
	line-height: 1.6em;
	display: none;
}

.queue-actions li:hover .subactions {
	display: block;
}

.queue-actions div.subactions a {
	padding: 3px 10px;
}

.queue-actions div.subactions a:hover {
	background-color: #FFF;
}

/* Attention */
.attention {
	border-bottom-style: dashed;
	border-bottom-width: 1px;
	padding-top: 5px;
}

.attention.last {
	border-bottom: 0;
}

.attention .content {
	font-size: 1.3em;
	padding-bottom: 10px;
}

p.attention-closed {
	background-color: #ECD5D8;
	margin-right: 0;
	padding: 3px;
}

/* Description diff */
#report .content pre, .attention .content pre {
	font-family: inherit;
	white-space: normal;
}

.ins {
	background-color: #dfd;
	text-decoration: underline;
}

.del {
	background-color: #fdd;
	text-decoration: line-through;
}

/* Categories */
#addcategory textarea {
	height: 185px;
}

/* Queue stats
--------------------------------------------- */
.fade { background: url("./images/fade.png") repeat-y left bottom; }

.stat-new {
	background-color: #999999;
	color: #20383C;
}

.stat-denied {
	background-color: #A91F1F;
	color: #250E0E;
}

.stat-approved {
	background-color: #86AD32;
	color: #333F1A;
}

#queue-stat-info {
	font-family: Verdana, Helvetica, Arial;
	font-size: 1.1em;
}

#queue-stat-info ul { margin-left: 15px; }
#queue-activity { margin-left: 3px; }

.stat-ratio span, .stat-day span, .day-list span {
	display: block;
	float: left;
	font-family: Helvetica, Arial, Verdana;
	text-align: center;
	width: 20px;
}

.stat-ratio { width: 300px; }

.stat-ratio span {
	height: 16px;
	padding: 2px 0;
}

.stat-day {
	float: left;
	height: 150px;
	margin-right: 7px;
}

.stat-day span {
	float: none;
	margin-bottom: 1px;
	position: relative;
}

.stat-day span strong {
	font-weight: normal;
	height: 10px;
	left: 0;
	margin-top: -5px;
	position: absolute;
	top: 50%;
	width: 100%;
}

.day-list {
	background-color: #FFF;
	border-bottom: 1px dotted #B5BEBF;
	border-top: 1px dotted #B5BEBF;
	clear: both;
	float: left;
	margin-bottom: 15px;
	padding: 4px 0;
	position: relative;
	top: 4px;
}

.day-list span { width: 27px; }

.day-list span.pip {
	background-color: #9DA1A3;
	height: 3px;
	margin-left: 50%;
	margin-top: -4px;
	width: 1px;
}

.legend {
	border: 1px solid #FFF;
	display: inline-block;
	height: 10px;
	width: 10px;
}

/* General
--------------------------------------------- */
.postbody.full { width: 100%; }

/* ColorBox adjustments; primarily switching control buttons to top */
#cboxLoadedContent {
	margin-top: 28px;
	margin-bottom: 0 !important;
	text-align: left;
}

#cboxLoadedContent h3 {
	top: 0;
	width: 100%;
	position: absolute;
}

#cboxNext, #cboxPrevious, #cboxClose, #cboxTitle, #cboxCurrent {
	top: 0;
	bottom: auto !important;
}

#cboxCurrent {
	top: 5px;
}

.dialog-options {
	text-align: center;
}

.successbox, .errorbox, .noticebox {
	padding: 0 10px;
	margin: 10px 0;
	color: #FFFFFF;
	text-align: center;
}

.success {
	color: #228822;
}

.error {
	color: #BC2A4D;
}

.successbox {
	background-color: #228822;
}

.noticebox {
	color: #000000;
	background-color: #ecf53e;
}

.errorbox {
	background-color: #BC2A4D;
}

* html .errorbox, * html .successbox, * html .noticebox { height: 1%; } /* Pixel shift fix for IE */

.successbox h3, .errorbox h3 {
	color: #FFFFFF;
	margin: 0 0 0.5em;
	font-size: 1.5em;
	font-family: "Lucida Grande",Verdana,Helvetica,Arial,sans-serif;
	border: none;
}

.noticebox h3 {
	color: #000000;
	margin: 0 0 0.5em;
	font-size: 1.5em;
	font-family: "Lucida Grande",Verdana,Helvetica,Arial,sans-serif;
	border: none;
}

.successbox p, .errorbox p {
	color: #FFFFFF;
	font-size: 1em;
	margin-bottom: 0;
}

.noticebox p {
	color: #000000;
	font-size: 1em;
	margin-bottom: 0;
}

.errorbox a:link, .errorbox a:active, .errorbox a:visited,
.successbox a:link, .successbox a:active, .successbox a:visited,
.noticebox a:link, .noticebox a:active, .noticebox a:visited {
	color: #DBD7D1;
	text-decoration: underline;
	font-weight: bold;
}

.errorbox a:hover, .successbox a:hover {
	color: #FFFFFF;
	text-decoration: none;
	font-weight: bold;
}

.noticebox a:hover {
	color: #FFFFFF;
	text-decoration: none;
	font-weight: bold;
}

.error_outline {
	border-color: #BC2A4D;
	border-width: 1px;
	border-style: solid;
}

fieldset dl:hover dt label.error {
	color: #BC2A4D;
}

textarea.elastic {
	min-height: 100px;
	max-height: 400px;
}

.text-content {
	white-space: pre-wrap;
}

.inline-attachment {
	white-space: normal;
}

ul.topiclist dd.revision-translations {
	width: 45%;
	padding: 0 10px;
	border-left: 0;
}

ul.topiclist dd.revision-translations h3 {
	margin-top: 0;
}

ul.topiclist dd.revision-translations .file {
	margin: 5px;
}

ul.topiclist dd.revision-translations .file dt {
	width: 45% !important;
}

ul.topiclist dd.revision-translations .file dd {
	padding: 0 5px;
	border-left: 0;
}

.revisions dt.revision-information {
	width: 50% !important;
}

hr.solid {
	border-top: 1px solid #CCCCCC;
	margin: 10px 0;
}

.contrib-download:after {
	clear: both;
	content: '';
	display: block;
}

